--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2",
-    "engines": {
-    "node": ">=14.0.0"
-     }
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
